--- a/templates/shopping_cart.html
+++ b/templates/shopping_cart.html
@@ -35,7 +35,7 @@
                                 <p style="margin:0;">选包装</p>
                             </div>
                         </td>
-                        <td>￥52.41</td>
+                        <td class="text-muted">￥52.41</td>
                         <td>
                             <span>
                                 <a style="text-align:center;border:solid 1px lightgray;border-right:0;float:left;height:28px;width:28px;background-color: #f4f4f4;"
@@ -63,6 +63,5 @@
                 </table>
             </form>
         </div>
-    </div>
     </div>
 {% endblock %}
