--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
                                            style="padding: 10px 15px;"
                                            aria-haspopup="true" aria-expanded="false">
                                             <img class="img-circle"
-                                                 src="{{ static('/images/avatar/1.jpg') }}"
+                                                 src="{{ request.user.avatar.url }}"
                                                  width="30" height="30">
                                         </a>
                                         <ul class=" dropdown-menu" style="min-width:100%;">
@@ -113,7 +113,7 @@
                 </nav>
             {% endblock %}
             {% block content %}
-                <div class="container" style="padding-top:60px">
+                <div class="container" style="padding-top:50px">
                     <div class="row">
                         <div class="col-md-6 col-md-offset-3">
                             {% if messages %}
