--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,8 +1,3 @@
-.card {
-    padding: 0 20px 20px;
-    margin-top: 20px;
-}
-
 #inputEmail, #inputPassword {
     padding: 20px;
 }
@@ -21,4 +16,13 @@
 
 .login-form .btn {
     margin-top: 8px;
+}
+
+.login-head {
+    margin-top: 20px;
+}
+
+.card {
+    padding: 0 20px 20px;
+    margin-top: 20px;
 }
