--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <body{% block body_attribs %}{% endblock %}>
         {% block body %}
             {% block navbar %}
-                <nav class="navbar navbar-default navbar-fixed-top">
+                <nav style="margin:0;" class="navbar navbar-default navbar-fixed-top">
                     <div class="container">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
