--- a/templates/index.html
+++ b/templates/index.html
@@ -8,33 +8,8 @@
 
 {% block page_content %}
     <div class="row">
-        <div class="col-md-2">
-            <div class="sidebar-left">
-                <div style="position:fixed;width:195px;" id="category" class="category panel-group">
-                    {% for category in categories %}
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a href="#category{{ loop.index }}" data-toggle="collapse"
-                                       data-parent="#category">{{ category.name }}</a>
-                                </h4>
-                            </div>
-                            <div id="category{{ loop.index }}"
-                                 class="panel-collapse collapse{% if loop.first %} in{% endif %}">
-                                <div class="panel-body">
-                                    <ul>
-                                        {% for down in category.down.all() %}
-                                            <li><a href="">{{ down.name }}</a></li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-        <div id="top" class="col-md-8">
+        {% include 'include/category_nav.html' %}
+        <div id="top" class="col-md-offset-2 col-md-8">
             <div id="index-carousel" class="card carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#index-carousel" data-slide-to="0" class="active"></li>
@@ -92,32 +67,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-2">
-            <div class="sidebar-right">
-                <div style="padding-top:10px;">
-                    <ul style="margin-bottom:10px;" class="list-group">
-                        <li class="list-heading list-group-item">
-                            <h4 class="list-group-item-heading">
-                                <span class="glyphicon glyphicon-fire"></span> 新书热卖榜</h4>
-                        </li>
-                        {% for book in new_books %}
-                            <li class="list-group-item"><a href="">{{ loop.index }} {{ book.name }}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div>
-                    <ul class="list-group">
-                        <li class="list-heading list-group-item">
-                            <h4 class="list-group-item-heading">
-                                <span class="glyphicon glyphicon-heart"></span> 图书畅销榜</h4>
-                        </li>
-                        {% for book in new_books %}
-                            <li class="list-group-item"><a href="">{{ loop.index }} {{ book.name }}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
+        {% include 'include/new_hot_list.html' %}
     </div>
 {% endblock %}
 
