--- a/templates/detail.html
+++ b/templates/detail.html
@@ -46,7 +46,7 @@
                 <h3>评论</h3>
                 <hr>
                 <ul style="list-style-type:none;padding:0;">
-                    {% for c in book.comments.all() %}
+                    {% for c in comments %}
                         <li style="border-bottom:1px solid #ddd;margin-bottom:15px;">
                             {# 评论者信息 #}
                             <div>
